--- a/public/member.html
+++ b/public/member.html
@@ -1,28 +1,115 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Hội Viên</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
-            background-color: #f4f4f4;
-        }
-        h1 {
-            color: #333;
-            font-size: 2.5rem;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>会員情報</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 40px 0;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      overflow: hidden;
+    }
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      padding: 20px 24px;
+      border-bottom: 1px solid #e0e0e0;
+    }
+
+    .row:last-child {
+      border-bottom: none;
+    }
+
+    .label {
+      font-weight: 600;
+      margin-bottom: 6px;
+    }
+
+    .value {
+      color: #333;
+      font-size: 15px;
+    }
+
+    .sub-text {
+      margin-top: 6px;
+      font-size: 13px;
+      color: #666;
+      line-height: 1.5;
+    }
+
+    .edit-btn {
+      border: 1px solid #999;
+      background: #fff;
+      padding: 6px 18px;
+      border-radius: 999px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+
+    .edit-btn:hover {
+      background-color: #f0f0f0;
+    }
+  </style>
 </head>
+
 <body>
+  <div class="container">
 
-    <h1>会員情報</h1>
+    <!-- 名前 -->
+    <div class="row">
+      <div>
+        <div class="label">名前</div>
+        <div class="value">amistad12790</div>
+      </div>
+      <button class="edit-btn">編集</button>
+    </div>
 
+    <!-- メール -->
+    <div class="row">
+      <div>
+        <div class="label">Eメール</div>
+        <div class="value">ngocdvt@gmail.com</div>
+      </div>
+      <button class="edit-btn">編集</button>
+    </div>
+
+    <!-- 携帯電話番号 -->
+    <div class="row">
+      <div>
+        <div class="label">携帯電話番号</div>
+        <div class="value">+818047636889</div>
+        <div class="sub-text">
+          この携帯電話番号ですばやくサインインし、パスワードを簡単に回復し、
+          セキュリティ通知を受け取ることができます。
+        </div>
+      </div>
+      <button class="edit-btn">編集</button>
+    </div>
+
+    <!-- パスワード -->
+    <div class="row">
+      <div>
+        <div class="label">パスワード</div>
+        <div class="value">********</div>
+      </div>
+      <button class="edit-btn">編集</button>
+    </div>
+
+  </div>
 </body>
 </html>
