--- a/public/register.html
+++ b/public/register.html
@@ -82,8 +82,8 @@
       background: #fff;
     }
 
-    .confirm-btn {
-      background: #000;
+    .btn {
+      background: #fff;
       color: #ff7a00;
       border: 2px solid #ff7a00;
       padding: 12px 28px;
@@ -93,7 +93,7 @@
       cursor: pointer;
     }
 
-    .confirm-btn:hover {
+    .btn:hover {
       background: #ff7a00;
       color: #fff;
     }
