--- a/public/register.html
+++ b/public/register.html
@@ -82,7 +82,7 @@
       background: #fff;
     }
 
-    .btn {
+    .btn confirm-btn{
       background: #fff;
       color: #ff7a00;
       border: 2px solid #ff7a00;
@@ -93,7 +93,7 @@
       cursor: pointer;
     }
 
-    .btn:hover {
+    .btn confirm-btn:hover {
       background: #ff7a00;
       color: #fff;
     }
