--- a/public/register.html
+++ b/public/register.html
@@ -23,7 +23,7 @@
       font-weight: 600;
     }
 
-    /* ===== FORM CARD (SAME AS MEMBER) ===== */
+    /* ===== FORM CARD ===== */
     .container {
       max-width: 700px;
       margin: 0 auto;
@@ -34,12 +34,8 @@
     }
 
     .row {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
       padding: 20px 24px;
       border-bottom: 1px solid #e0e0e0;
-      gap: 16px;
     }
 
     .row:last-child {
@@ -61,17 +57,20 @@
       margin-left: 6px;
     }
 
+    /* ===== UNDERLINE INPUT ===== */
     .input {
       width: 100%;
-      padding: 10px 12px;
+      padding: 6px 2px;
       font-size: 15px;
-      border: 1px solid #999;
-      border-radius: 4px;
+      border: none;
+      border-bottom: 2px solid #999;
+      border-radius: 0;
+      background: transparent;
     }
 
     .input:focus {
       outline: none;
-      border-color: #ff7a00;
+      border-bottom-color: #ff7a00;
     }
 
     .sub-text {
