--- a/public/register.html
+++ b/public/register.html
@@ -63,7 +63,7 @@
       padding: 6px 2px;
       font-size: 15px;
       border: none;
-      border-bottom: 2px solid #999;
+      border-bottom: 1px solid #1d1c1c;
       border-radius: 0;
       background: transparent;
     }
