--- a/public/login.html
+++ b/public/login.html
@@ -52,20 +52,26 @@
     <!-- ERROR MESSAGE -->
     <div class="row" id="error-row" style="display:none;">
       <div class="content">
-        <div style="color:#d93025; font-size:14px;" id="error-message"></div>
+        <div
+          id="error-message"
+          style="color:#d93025; font-size:14px;"
+        ></div>
       </div>
     </div>
 
     <!-- BUTTONS -->
     <div class="button-area">
+
+      <!-- 会員登録 -->
       <button
         type="button"
-        class="back-btn"
-        onclick="location.href='index.html'"
+        class="confirm-btn"
+        onclick="location.href='register.html'"
       >
-        戻る
+        新規会員登録
       </button>
 
+      <!-- ログイン -->
       <button
         type="button"
         class="confirm-btn"
@@ -73,6 +79,7 @@
       >
         ログイン
       </button>
+
     </div>
 
   </div>
@@ -95,7 +102,8 @@
       errorMessage.textContent = "";
 
       if (!email || !password) {
-        errorMessage.textContent = "メールアドレスとパスワードを入力してください";
+        errorMessage.textContent =
+          "メールアドレスとパスワードを入力してください";
         errorRow.style.display = "block";
         return;
       }
@@ -115,13 +123,13 @@
         const result = await response.json();
 
         if (!response.ok) {
-          errorMessage.textContent = result.message || "ログインに失敗しました";
+          errorMessage.textContent =
+            result.message || "ログインに失敗しました";
           errorRow.style.display = "block";
           return;
         }
 
-        /* ✅ Login success */
-        // Lv3: session cookie is set by backend (httpOnly)
+        /* ✅ Login success (Lv3: session cookie set by backend) */
         location.href = "dashboard.html";
 
       } catch (err) {
